[package]
name = "wol-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
keepawake = "0.5.1"
ping-rs = "0.1.2"
tokio = { version = "1.40.0", features = ["rt", "io-util", "macros", "time", "net", "sync"] }
wake-on-lan = "0.2.0"
